# GreenDisk

./: .gitattributes
GreenDisk_Server/: CMakeLists.txt  Socket.cpp  Socket.h  main.cpp
GreenDisk_Server/dependence/mysql/include/: my_config.h
GreenDisk_Server/dependence/mysql/lib/: libmysqld.lib  mysqlserver.lib  mysqlservices.lib
GreenDisk_Server/include/: define.h  globalSQL.h
GreenDisk_Server/src/: MysqlConnect.cpp  MysqlConnect.h
GreenDisk_Server/utils/: Utils.cpp  Utils.h
